[BeOS Only] Bug 66809: New MODAL_SUBSET windows are no created. r=VYA04230@nifty.com